--- a/can_emulator/Gemfile
+++ b/can_emulator/Gemfile
@@ -4,7 +4,10 @@ source 'https://rubygems.org'
 
 # gem "rails"
 
-gem 'rspec', '~> 3.13'
-gem 'simplecov', require: false, group: :test
-
 gem "ostruct", "~> 0.6.0"
+gem "rake", "~> 13.2"
+
+group :test do
+  gem 'rspec', '~> 3.13'
+  gem "simplecov", "~> 0.22.0"
+end
