--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,8 +10,11 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  can_emulator_test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: canalyze/can_emulator
     steps:
       - uses: actions/checkout@v4
 
@@ -19,14 +22,10 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3.5
-          bundler-cache: true  # Runs 'bundle install' and caches installed gems automatically
+          bundler-cache: true
 
-      - name: Change to can_emulator directory
-        working-directory: canalyze/can_emulator
-        run: |
-          # Install dependencies
-          bundle install
+      - name: Install dependencies
+        run: bundle install
 
       - name: Run tests
-        working-directory: canalyze/can_emulator
         run: bundle exec rake
