Refactor workflow directory structure
Removed the default working-directory property from the job and added the working directory within each step for better clarity and maintainability. This ensures each step runs in the correct directory, avoiding potential issues if more steps are added in the future.

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,9 +12,6 @@ permissions:
 jobs:
   can_emulator_test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: canalyze/can_emulator
     steps:
       - uses: actions/checkout@v4
 
@@ -25,7 +22,9 @@ jobs:
           bundler-cache: true
 
       - name: Install dependencies
+        working-directory: can_emulator
         run: bundle install
 
       - name: Run tests
+        working-directory: can_emulator
         run: bundle exec rake
