--- a/can_emulator/Gemfile
+++ b/can_emulator/Gemfile
@@ -2,12 +2,23 @@
 
 source 'https://rubygems.org'
 
-# gem "rails"
+# Main gems
+gem 'ostruct', '~> 0.6.0'
+gem 'rake', '~> 13.2'
 
-gem "ostruct", "~> 0.6.0"
-gem "rake", "~> 13.2"
+# Development and Testing
+group :development, :test do
+  # RuboCop and related linting tools
+  gem 'rubocop', '~> 1.68', require: false
+  gem 'rubocop-performance', '~> 1.22', require: false
+end
 
+# Testing
 group :test do
   gem 'rspec', '~> 3.13'
-  gem "simplecov", "~> 0.22.0"
+  gem 'simplecov', '~> 0.22.0', require: false
 end
+
+gem 'rubocop-rake', '~> 0.6.0'
+
+gem 'rubocop-rspec', '~> 3.2'
