--- a/can_emulator/data/protocols/mazda_rx8_1/codes.yml
+++ b/can_emulator/data/protocols/mazda_rx8_1/codes.yml
@@ -1,6 +1,6 @@
 CAN_Bus_Data:
   Indicator_Lights:
-    Message_ID_0x40:
+    Message_ID_0x650:
       Description: Indicator Light Colors
       Parameters:
         - Light_Color:
@@ -13,7 +13,7 @@ CAN_Bus_Data:
             Raw_Data: "0xC0"
             Parsed_Value: "Both (Green and Yellow)"
       Example_Data:
-        ID: 0x40
+        ID: 650
         Data: "0x40"
         Notes:
           - "0x40 represents Green"
@@ -21,7 +21,7 @@ CAN_Bus_Data:
           - "0xC0 represents Both (Green and Yellow)"
 
   Engine_Parameters:
-    Message_ID_RPM:
+    Message_ID_201:
       Description: Engine RPM
       Parameters:
         - RPM:
@@ -29,14 +29,14 @@ CAN_Bus_Data:
             Formula: "Actual RPM * 3.85"
             Example_Parsed_Value: "5000 RPM"
       Example_Data:
-        ID: RPM
+        ID: 201
         Data: "0x12 0x34"
         Notes:
           - "Formula: Actual RPM * 3.85"
           - "0x1234 translates to an RPM value (e.g., 5000 RPM)"
 
   Throttle:
-    Message_ID_Throttle_Pedal:
+    Message_ID_201:
       Description: Throttle Pedal Position
       Parameters:
         - Pedal_Position:
@@ -44,54 +44,58 @@ CAN_Bus_Data:
             Increment: "0.5%"
             Parsed_Range: "0% - 100%"
       Example_Data:
-        ID: Throttle_Pedal
+        ID: 201
         Data: "0x64"
         Notes:
           - "0x64 represents a pedal position at 50% with increments of 0.5% per unit from 0x00 to 0xC8"
 
   Warnings:
-    Message_ID_Check_Engine:
+    Message_ID_420:
       Description: Check Engine Light Status
       Parameters:
         - Check_Engine:
             Raw_Data: "Bit 7"
             Parsed_Value: "On if Bit 7 is set, otherwise Off"
       Example_Data:
-        ID: Check_Engine
+        ID: 420
         Data: "0x80"
         Notes:
           - "Bit 7 indicates the check engine light status; 0x80 means the light is On"
 
   Speed:
-    Message_ID_Vehicle_Speed:
+    Message_ID_4b1:
       Description: Vehicle Speed in KPH
       Parameters:
         - Speed:
             Raw_Data: "Wheel Speed / 100"
-            Formula: "(Actual KPH * 100) + 10000"
+            Formula: "(Wheel Speed * 100) / 10000"
             Example_Parsed_Value: "100 KPH"
       Example_Data:
-        ID: Vehicle_Speed
+        ID: 4b1
         Data: "0x27 0x10"
         Notes:
-          - "0x2710 translates to 100 KPH using the formula (Actual KPH * 100) + 10000"
+          - "Wheel speed divided by 100 gives the speed in KPH (e.g., 100 KPH)"
 
   Transmission:
-    Message_ID_Transmission_Type:
-      Description: Transmission Type
+    Message_ID_630:
+      Description: Transmission Type and Wheel Size
       Parameters:
         - Transmission:
             Raw_Data: "0x08 or 0x02"
             Parsed_Value: "Manual (0x08), Automatic (0x02)"
+        - Wheel_Size:
+            Raw_Data: "0x106"
+            Parsed_Value: "Wheel Size"
       Example_Data:
-        ID: Transmission_Type
+        ID: 630
         Data: "0x08"
         Notes:
           - "0x08 represents a Manual transmission"
           - "0x02 represents Automatic"
+          - "0x106 represents wheel size"
 
   Oil_Pressure:
-    Message_ID_Oil_Pressure:
+    Message_ID_420:
       Description: Oil Pressure Status
       Parameters:
         - Oil_Pressure:
@@ -101,7 +105,7 @@ CAN_Bus_Data:
             Raw_Data: "0"
             Parsed_Value: "Fault"
       Example_Data:
-        ID: Oil_Pressure
+        ID: 420
         Data: "0x01"
         Notes:
           - "Data value >= 1 indicates pressure is OK"
