--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,15 +19,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.10'
+          node-version: "22.10"
 
       - name: Install dependencies
         working-directory: message_uploader
         run: npm install
-
-      - name: Build the project
-        working-directory: message_uploader
-        run: npm run build
 
       - name: Run tests with coverage
         working-directory: message_uploader
