--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -22,9 +22,9 @@ jobs:
           node-version: "22.10"
 
       - name: Install dependencies
-        working-directory: message_uploader
+        working-directory: message_reader
         run: npm install
 
       - name: Run tests with coverage
-        working-directory: message_uploader
+        working-directory: message_reader
         run: npm run test
